[package]
authors = ["David Wallace Croft <david@CroftSoft.com>"]
categories = ["games"]
description = "Tank combat game using the A* algorithm"
edition = "2021"
homepage = "https://www.CroftSoft.com/"
keywords = ["algorithm"]
license = "MIT"
name = "com-crofsoft-app-mars"
publish = false
readme = "README.md"
repository = "https://github.com/david-wallace-croft/com-croftsoft-app-mars"
version = "0.0.1-SNAPSHOT"

[dependencies]
anyhow = "1.0.66"
# com-croftsoft-core = { path = "../../../crates/com-croftsoft-core" }
com-croftsoft-core = { git = "https://github.com/david-wallace-croft/com-croftsoft-core" }
# com-croftsoft-core = "0.9.0"
# com-croftsoft-lib-animation = { path = "../../../crates/com-croftsoft-lib-animation" }
# com-croftsoft-lib-animation = { git = "https://github.com/david-wallace-croft/com-croftsoft-lib-animation" }
com-croftsoft-lib-animation = "0.0.5"
com-croftsoft-lib-role = "0.2.0"
console_error_panic_hook = "0.1.7"
futures = "0.3.26"
js-sys = "0.3.61"
# TODO: maybe remove rand if I can access random number generator via js-sys
rand = "0.8.5"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
wee_alloc = { optional = true, version = "0.4.5" }

# TODO: maybe remove this if I can access random number generator via js-sys
[dependencies.getrandom]
features = [
  "js",
]
version = "0.2.8"

[dependencies.web-sys]
features = [
  "CanvasRenderingContext2d",
  "Document",
  "HtmlCanvasElement",
  "HtmlCollection",
  "HtmlInputElement",
  "Window",
  "console",
]
version = "0.3.61"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[features]
default = ["wee_alloc"]

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
