[package]
authors = ["David Wallace Croft <david@CroftSoft.com>"]
categories = ["games"]
description = "Tank combat game using the A* algorithm"
edition = "2021"
homepage = "https://www.CroftSoft.com/"
keywords = ["algorithm"]
license = "MIT"
name = "com-crofsoft-app-mars"
publish = false
readme = "README.md"
repository = "https://github.com/david-wallace-croft/com-croftsoft-app-mars"
version = "0.0.4-SNAPSHOT"

[dependencies]
anyhow = "1.0.75"
# com-croftsoft-core = { path = "../../../crates/com-croftsoft-core" }
# com-croftsoft-core = { git = "https://github.com/david-wallace-croft/com-croftsoft-core" }
com-croftsoft-core = "0.14.0"
# com-croftsoft-lib-animation = { path = "../../../crates/com-croftsoft-lib-animation" }
# com-croftsoft-lib-animation = { git = "https://github.com/david-wallace-croft/com-croftsoft-lib-animation" }
com-croftsoft-lib-animation = "0.0.7"
com-croftsoft-lib-role = "0.4.0"
console_error_panic_hook = "0.1.7"
futures = "0.3.28"
js-sys = "0.3.64"
rand = "0.8.5"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"

# TODO: maybe remove this if I can access random number generator via js-sys
[dependencies.getrandom]
features = ["js"]
version = "0.2.10"

[dependencies.web-sys]
features = [
  "CanvasRenderingContext2d",
  "Document",
  "HtmlCanvasElement",
  "HtmlCollection",
  "HtmlInputElement",
  "Window",
  "console",
]
version = "0.3.64"

[dev-dependencies]
wasm-bindgen-test = "0.3.37"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
