[package]
authors = ["David Wallace Croft <david@CroftSoft.com>"]
categories = ["games"]
description = "Tank combat game using the A* algorithm"
edition = "2021"
homepage = "https://www.CroftSoft.com/"
keywords = ["algorithm"]
license = "MIT"
name = "com-crofsoft-app-mars"
publish = false
readme = "README.md"
repository = "https://github.com/david-wallace-croft/com-croftsoft-app-mars"
rust-version = "1.65"
version = "0.0.4-SNAPSHOT"

[dependencies]
anyhow = "1.0.80"
# com-croftsoft-core = { path = "../../../crates/com-croftsoft-core" }
# com-croftsoft-core = { git = "https://github.com/david-wallace-croft/com-croftsoft-core" }
com-croftsoft-core = "0.14.0"
# com-croftsoft-lib-animation = { path = "../../../crates/com-croftsoft-lib-animation" }
# com-croftsoft-lib-animation = { git = "https://github.com/david-wallace-croft/com-croftsoft-lib-animation" }
com-croftsoft-lib-animation = "0.0.8"
com-croftsoft-lib-role = "0.5.1"
console_error_panic_hook = "0.1.7"
futures = "0.3.30"
js-sys = "0.3.68"
rand = "0.8.5"
wasm-bindgen = "0.2.91"
wasm-bindgen-futures = "0.4.41"

# TODO: maybe remove this if I can access random number generator via js-sys
[dependencies.getrandom]
features = ["js"]
version = "0.2.12"

[dependencies.web-sys]
features = [
  "CanvasRenderingContext2d",
  "Document",
  "HtmlCanvasElement",
  "HtmlCollection",
  "HtmlInputElement",
  "Window",
  "console",
]
version = "0.3.68"

[dev-dependencies]
wasm-bindgen-test = "0.3.41"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
